overflow fixed with hero addition

--- a/junior/loopstudios-landing-page/style.scss
+++ b/junior/loopstudios-landing-page/style.scss
@@ -26,24 +26,29 @@
 
 /*===BASE ELEMENTS===*/
 
-html {
+html,
+body {
   overflow-x: hidden;
 }
 
 body {
+  position: relative;
+  height: 100vh;
+
   font-family: var(--font-josefin);
   font-size: calc(1rem - 1px);
 }
 
 /*===MAIN NAVIGATION===*/
 .main-header {
-  background-color: red;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+
+  position: absolute;
+  width: 100%;
 
   padding: 2rem;
-
   .company-logo {
     position: relative;
     z-index: 10;
@@ -86,6 +91,17 @@ body {
         font-size: 2rem;
         text-transform: uppercase;
       }
+    }
+  }
+}
+
+.hero-landing {
+  &__image-wrapper {
+    height: 100vh;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
